# hackpress

./: .gitignore  Cargo.toml  LICENSE  README.md
database/: plugins-top.txt  plugins.txt  themes-top.txt  themes.txt
docs/: EXPLOIT_TEMPLATES.md  TEMPLATE_TUTORIAL.md  VULN_TEMPLATES.md
docs/scripts-examples/vulns/: example-sqli.json  example-xss.json
src/: bruteforce.rs  cli.rs  constants.rs  database.rs  detection.rs  enumeration.rs  error_detection.rs  exploits.rs  file_disclosure.rs  http_client.rs  interactive.rs  main.rs  models.rs  output.rs  scanner.rs  tech_stack.rs  vulnerability_matcher.rs  vulns.rs
templates/exploits/: exploit.json
