[package]
name = "hackpress"
version = "0.1.0"
edition = "2021"
authors = ["SimulatedSecurity"]
description = "Open-source WordPress security scanner with exploit templates and vulnerability validation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simulatedsecurity/hackpress"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
semver = "1.0"
colored = "2.1"
anyhow = "1.0"
dirs = "5.0"
rand = "0.8"
url = "2.5"
base64 = "0.21"
rustyline = "12.0"